# avr-emu

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  cpu.h  emu_prog.cc  executor.cc  executor.h  main.cc  memory.cc  memory.h
core/: CMakeLists.txt  Makefile  clock.cc  clock.h  coremodule.cc  coremodule.h  cpu.h  executioncontext.h  executor.cc  executor.h  iclock.h  loader.cc  loader.h  memory.cc  memory.h  noopclock.cc  noopclock.h
instructions/: CMakeLists.txt  Makefile  add.cc  add.h  adiw.cc  adiw.h  and.cc  and.h  andi.cc  andi.h  asr.cc  asr.h  bclr.cc  bclr.h  bld.cc  bld.h  brbc.cc  brbc.h  break.cc  break.h  bst.cc  bst.h  call.cc  call.h  cbi.cc  cbi.h  com.cc  com.h  cp.cc  cp.h  cpi.cc  cpi.h  cpse.cc  cpse.h  dec.cc  dec.h  eor.cc  eor.h  fmul.cc  fmul.h  (+108 more)
tests/: CMakeLists.txt  Makefile  test_addinstruction.cc  test_adiwinstruction.cc  test_andiinstruction.cc  test_andinstruction.cc  test_asrinstruction.cc  test_bclrinstruction.cc  test_bldinstruction.cc  test_brbcinstruction.cc  test_bstinstruction.cc  test_callinstruction.cc  test_cbiinstruction.cc  test_cominstruction.cc  test_cpiinstruction.cc  test_cpinstruction.cc  test_cpseinstruction.cc  test_decinstruction.cc  test_eorinstruction.cc  test_executor.cc  test_fmulinstruction.cc  test_icallinstruction.cc  test_ijmpinstruction.cc  test_incinstruction.cc  test_ininstruction.cc  test_jmpinstruction.cc  test_lacinstruction.cc  test_lasinstruction.cc  test_latinstruction.cc  test_lddinstruction.cc  test_lddzinstruction.cc  test_ldiinstruction.cc  test_ldinstruction.cc  test_ldsinstruction.cc  test_lpminstruction.cc  test_lsrinstruction.cc  test_movinstruction.cc  test_movwinstruction.cc  test_mulinstruction.cc  test_mulsinstruction.cc  (+33 more)
